[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pong-cluster"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
tokio = { version = "1", features = ["full"] }
prost = "0.10"

[build-dependencies]
tonic-build = "0.11.0"